--- a/web-data-viz/public/dashMonitoramento-vitor-especifico.html
+++ b/web-data-viz/public/dashMonitoramento-vitor-especifico.html
@@ -16,7 +16,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11" defer></script>
     <script src="./assets/Scripts/dashMonitoramento-especifica.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
-    <title>Dashboar monitoramento</title>
+    <title>Dashboard monitoramento</title>
 </head>
 
 <body>
@@ -154,11 +154,10 @@
                             <div class="informacoesCPU textoGrafico">
                                 <div class="containerTitulo2">
                                     <h4><i class='bx  bx-folder'></i> Disco</h4>
-                                    <div class="containerFiltroCpu">
-                                        <!-- <p>Filtrar</p> -->
+                                    <!-- <div class="containerFiltroCpu">
                                         <i class="fa-solid fa-filter" style="border: none;" data-id-filtro="Disco"
                                             onclick="modalFiltro(this)"></i>
-                                    </div>
+                                    </div> -->
                                 </div>
 
                                 <div>
@@ -174,11 +173,10 @@
                         <div class="redeChart charts">
                             <div class="containerTitulo">
                                 <h2><i class="fa-solid fa-wifi"></i>Rede</h2>
-                                <div class="containerFiltroCpu">
-                                    <!-- <p>Filtrar</p> -->
+                                <!-- <div class="containerFiltroCpu">
                                     <i class="fa-solid fa-filter" style="border: none;" data-id-filtro="Rede"
                                         onclick="modalFiltro(this)"></i>
-                                </div>
+                                </div> -->
                             </div>
                             <div class="containerDowUp">
                                 <div class="downloadContainer valoresContainer">
