--- a/web-data-viz/public/dashAdmin.html
+++ b/web-data-viz/public/dashAdmin.html
@@ -104,7 +104,7 @@
                         <span class="txtKpi">
                             <p class="dadoKpi" id="qtdFabricasCriticas"><span class="loader"></span></p>
                         </span>
-                        <h3>Clique <a id="fabricas">aqui</a> para ver elas</h3>
+                        <h3 id="selecionar">Clique <a id="fabricas">aqui</a> para ver elas</h3>
                     </div>
 
                 </div>
