--- a/web-data-viz/public/dashDuda.html
+++ b/web-data-viz/public/dashDuda.html
@@ -163,19 +163,10 @@
                         <h3>Processos com mais Consumo durante o mês </h3>
                     </div>
                     <div class="componentesContainer">
-                        <table id="">
-                            <thead>
-                                <tr>
-                                    <th>Servidor</th>
-                                    <th>Componente(s)</th>
-                                    <th>IP</th>
-                                    <th>Visualizar</th>
-                                    <th></th>
-
-                                </tr>
-                            </thead>
-                        </table>
-                    </div>
+                <table id="tabela-alertas">
+                    
+                </table>
+            </div>
                 </div>
 
             </div>
