final dash componente

--- a/web-data-viz/public/dashAnalise.html
+++ b/web-data-viz/public/dashAnalise.html
@@ -91,8 +91,7 @@
                             </select>
                         </div>
                         <!-- data -->
-                        <div
-                            style="display: flex; align-items: center; gap: 10px; margin-left: 10vw; color: gray;height: 5vh;">
+                        <div style="display: flex; align-items: center; gap: 10px; margin-left: 7vw; color: gray;height: 5vh;">
                             <i class='bx bxs-time' style="font-size: 22px;"></i>
                             <p id="dataInfo"></p>
                         </div>
