primeira tentativa integração bob analista

--- a/web-data-viz/public/dashAnalise.html
+++ b/web-data-viz/public/dashAnalise.html
@@ -77,7 +77,10 @@
 
         <!-- painel grafs -->
         <div class="painelDash">
-
+            <div class="bobPredicao">
+                <span id="bobP"></span>
+                <img src="./assets/images/bobIA-removebg-preview.png" alt="">
+            </div>
             <!-- cabecalho -->
             <div class="cabecalhoDash">
                 <div class="texto">
