--- a/web-data-viz/public/dashDuda.html
+++ b/web-data-viz/public/dashDuda.html
@@ -63,6 +63,10 @@
         </div>
 
         <div class="painelDash">
+            <div class="bobCorrelacao">
+                <span id="bobC"></span>
+                <img src="./assets/images/bobIA-removebg-preview.png" alt="">
+            </div>
             <div class="tempoReal">
                 <div class="texto">
                     <h1>Análise <span id="id_mes"></span></h1>
@@ -75,8 +79,6 @@
 
                     <select id="slt_mes" onselect="atualizarDados()">
                     </select>
-                    
-                
 
                     <input type="date" id="ipt_data" oninput="atualizarDadosDia()">
                     <button class="botaoGrafico" onclick="esconder()">
