--- a/web-data-viz/public/dashGestaofabrica.html
+++ b/web-data-viz/public/dashGestaofabrica.html
@@ -16,6 +16,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script> 
     <script src="https://unpkg.com/simple-statistics@7.8.3/dist/simple-statistics.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
     <!-- Scripts -->
     <script src="./assets/Scripts/sessao.js" defer></script>
@@ -67,6 +68,10 @@
 
     </div>
     <div class="painelDash">
+        <div class="bobPredicao">
+            <span id="bobP"></span>
+            <img src="./assets/images/bobIA-removebg-preview.png" alt="">
+        </div>
         <h1 style="font-size:xx-large; margin-left: 1%;">Gestão da Infraestrutura</h1>
         <h2 style="margin-top: 1%; margin-bottom: -2%;">Monitore seus recursos</h2>
         
