--- a/web-data-viz/public/dashMonitoramento-vitor.html
+++ b/web-data-viz/public/dashMonitoramento-vitor.html
@@ -79,16 +79,16 @@
                     <div class="containerKpis">
                         <div class="tempo_atividade">
                             <h3 id="alerta">Quantidade de servidores(critico)</h3>
-                            <p>2</p>
+                            <p id="qtdServidoresCritico"></p>
                         </div>
                         <div class="tempo_atividade">
                             <h3>Quantidade de servidores(atenção)</h3>
-                            <p>4</p>
+                            <p id="qtdServidoresAtencao"></p>
                         </div>
 
                         <div class="tempo_atividade">
                             <h3>Total de servidores monitorados</h3>
-                            <p id="qtdTotalServidores">6</p>
+                            <p id="qtdTotalServidores"></p>
                         </div>
                     </div>
                 </div>
