--- a/web-data-viz/public/dashMonitoramento-vitor-especifico.html
+++ b/web-data-viz/public/dashMonitoramento-vitor-especifico.html
@@ -92,7 +92,7 @@
                                 <th>Nome</th>
                                 <th>CPU</th>
                                 <th>RAM</th>
-                                <th>Informações</th>
+                                <th>Finalizar Processo</th>
                             </tr>
                         </thead>
                         <tbody id="tbody">
