--- a/web-data-viz/public/dashMonitoramento-vitor-especifico.html
+++ b/web-data-viz/public/dashMonitoramento-vitor-especifico.html
@@ -69,7 +69,7 @@
             </div> -->
 
             <div class="titleContainer">
-                <h1>SV001</h1>
+                <h1 id="nomeServidor">SV001</h1>
                 <p>Acompanhe o consumo em tempo real</p>
             </div>
             <hr>
@@ -160,8 +160,8 @@
 
                                 </div>
                                 <div>
-                                    <h5>Utilização</h5>
-                                    <p id="utilizacaoInfo"></p>
+                                    <h5 style="font-size: 2.5vw;">Utilização</h5>
+                                    <p id="utilizacaoInfo" style="font-size: 2.0vw;"></p>
                                 </div>
                             </div>
                             <div id="chart"></div>
@@ -177,8 +177,8 @@
                                 </div>
 
                                 <div>
-                                    <h5>Utilização</h5>
-                                    <p id="utilizacaoInfoDisco">60%</p>
+                                    <h5 style="font-size: 2.5vw;">Utilização</h5>
+                                    <p id="utilizacaoInfoDisco" style="font-size: 2.0vw;"></p>
                                 </div>
                             </div>
                             <div id="chartDisco"></div>
@@ -219,13 +219,13 @@
                                     <h4><i class='bx  bx-credit-card-front'></i> RAM</h4>
                                     <div class="containerFiltroCpu">
                                         <!-- <p>Filtrar</p> -->
-                                        <i class="fa-solid fa-filter" style="border: none;" data-id-filtro="Ram"
+                                        <i class="fa-solid fa-filter" style="border: none; " data-id-filtro="Ram"
                                             onclick="modalFiltro(this)"></i>
                                     </div>
                                 </div>
                                 <div>
-                                    <h5>Utilização</h5>
-                                    <p id="utilizacaoInfoRam"> 100%</p>
+                                    <h5 style="font-size: 2.0vw;">Utilização</h5>
+                                    <p id="utilizacaoInfoRam" style="font-size: 2.5vw;"> </p>
                                 </div>
                             </div>
                             <div id="chartRam"></div>
