fix: arruma sessao, dashMonitoramento, listaServidores

--- a/web-data-viz/public/dashMonitoramento-vitor.html
+++ b/web-data-viz/public/dashMonitoramento-vitor.html
@@ -112,15 +112,19 @@
                                 <th>Visualizar</th>
                             </tr>
                         </thead>
-                        <!-- <td data-label="ID">1</td>
-                        <td data-label="Servidor">SV001
-                        </td>
-                        <td data-label="CPU">80%</td>
-                        <td data-label="RAM">90%</td>
-                        <td data-label="Disco">100%</td>
-                        <td data-label="Rede">60%</td>
-                        <td data-label="Visualizar"><i class="fa fa-eye" aria-hidden="true" onclick="abrirModal()"></i>
-                        </td> -->
+                        <tbody class="atencao">
+                            <td data-label="ID">1</td>
+                            <td data-label="Servidor">SV001
+                            </td>
+                            <td data-label="CPU">80%</td>
+                            <td data-label="RAM">90%</td>
+                            <td data-label="Disco">100%</td>
+                            <td data-label="Rede">60%</td>
+                            <td data-label="Visualizar"><i class="fa fa-eye" aria-hidden="true"
+                                    onclick="abrirModal()"></i>
+                            </td>
+                        </tbody>
+
                     </table>
                     <div class="pagination" id="paginacao"></div>
                 </div>
