--- a/web-data-viz/public/listadeservidores.html
+++ b/web-data-viz/public/listadeservidores.html
@@ -71,13 +71,13 @@
                         
                     </tr>
                 </thead>
-                                <tbody>
+                                <!-- <tbody>
                     <td data-label = "Servidor">SV${servidor.idMaquina}</td>
                     <td data-label = "Componente(s)">${servidor.componentes}<button class='bx bx-plus' data-id="${servidor.idMaquina}" style="cursor:pointer; background:linear-gradient(270deg, #012027, #04708D); color: #fff; border-radius:10px; margin-left: 8px; border: 1px solid #000;">
                     </button></td>
                     <td data-label = "IP">${servidor.ip}</td>
                     <button class="btn-purple" data-id="${servidor.idMaquina}"><i class='bx bxs-trash'></i></button></td>
-                </tbody>
+                </tbody> -->
                 </table>
                 <div class="pagination" id="paginacao"></div>
             </div>
