--- a/web-data-viz/public/dashAdmin.html
+++ b/web-data-viz/public/dashAdmin.html
@@ -189,7 +189,7 @@
                 <div class="containerFabricas">
                     <div class="tituloContainerFabricas">
                         <h4 style="display: flex; justify-content: space-between;width: 26vw;">
-                        <div class="nomeGrafico" style="display: flex; gap: 5px;">Fábricas com maior criticidade (Top 6)
+                        <div class="criticidade" style="display: flex; gap: 5px;">Fábricas com maior criticidade (Top 6)
                         </div>
                         </h4>
                     </div>
